# PipeWireSharp

./: PipeWireSharp.sln
PipeWireSharp/: PipeWireSharp.csproj  PipeWireSharpLib.cs
PipeWireSharp.BindGen/: Program.cs
PipeWireSharp.BindGen/Tools/: Cargo.cs  Git.cs  PostProcess.cs
PipeWireSharp.Tests/: PipeWireRecordingTests.cs  PipeWireSharp.Tests.csproj
PipeWireSharp.Tests/DBus/: PropertyChanges.cs  XdgPortals.cs
PipeWireSharp.Tests/Recording/: RawVideoFrame.cs  RecordingSession.cs
PipeWireSharp.Tests/ScreenCast/: ScreenCastCaptureSession.cs  ScreenCastSession.cs  ScreenCastStream.cs
PipeWireSharp/Native/: Bindings.g.cs
PipeWireSharp/PipeWire/: Context.cs  Core.cs  MainLoop.cs  PwProperties.cs  PwPropertyKey.cs
PipeWireSharp/PipeWire/Buffers/: PipeWireBuffer.cs
PipeWireSharp/PipeWire/Streams/: Stream.cs  StreamControl.cs  StreamEvents.cs  StreamFlags.cs  StreamListener.cs  StreamListenerBuilder.cs  StreamState.cs
PipeWireSharp/Spa/: StreamParameters.cs  VideoParameters.cs
PipeWireSharp/Spa/Buffers/: SpaBuffer.cs  SpaData.cs  SpaMeta.cs
PipeWireSharp/Spa/Enums/: SpaFormat.cs  SpaMediaSubType.cs  SpaMediaType.cs  SpaParamType.cs  SpaProperty.cs  SpaType.cs  SpaVideoFormat.cs
PipeWireSharp/Spa/Utils/: Direction.cs  VideoFrameDataAccessor.cs
PipeWireSharp/Utils/: FFIHelper.cs  SpaEnumUtils.cs
pipewire-bindgen/: Cargo.toml  build.rs
pipewire-bindgen/src/: lib.rs
